--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,13 @@
 *.tar.gz
 *.rar
 
+# IDE specific files
+.settings/
+.project
+.classpath
+
+# Maven generated
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
