--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-# See http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
-spring.thymeleaf.cache=false
-spring.main.show-banner=false
-logging.level.jdbc=OFF
-logging.level.jdbc.sqltiming=DEBUG
-logging.level.jdbc.resultsettable=DEBUG
 server.port=8081
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.dll-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pelican-db
+spring.datasource.username=myuser
+spring.datasource.password=aboba
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.open-in-view=false
