--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.dll-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pelican-db
-spring.datasource.username=myuser
-spring.datasource.password=aboba
+spring.jpa.hibernate.dll-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pelican_db
+spring.datasource.username=danylo
+spring.datasource.password=denylo4152637
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.open-in-view=false
